//****************************************************
// protoc --go_out=. --go-grpc_out=. ./*.proto
//****************************************************

syntax = "proto3";

// dirout;package
option go_package = "./pbtodoapp;pbtodoapp";

package todoapp;

service TodoService {
    // Unary RPC
    rpc Create (TodoCreateRequest) returns (Todo){}
    // Bidirectional streaming RPC
    rpc CreateMultiple (stream TodoCreateRequest) returns (stream Todo){}
    // Unary RPC
    rpc Read (Id) returns (Todo){}
    // Server streaming RPC
	rpc ReadAll (ReadAllRequest) returns (stream Todo){}
    // Unary RPC
	rpc Update (Todo) returns (Todo){}
    // Unary RPC
	rpc Delete (Id) returns (DeleteResponse){}
    // Client streaming RPC
	rpc DeleteMultiple (stream Id) returns (DeleteResponse){}
}

message ReadAllRequest {}

message DeleteResponse {}

message Todo {
    uint64 id = 1;
    string description = 2;
    bool done = 3;
}

message TodoCreateRequest {
    string description = 1;
}

message Id {
    uint64 id = 1;
}